// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact matches 1`] = `
<a
  href="/Homepage"
  onClick={[Function]}
/>
`;

exports[`Homepage matches 1`] = `
<a
  href="/Homepage"
  onClick={[Function]}
/>
`;

exports[`Login matches 1`] = `
<a
  href="/Login"
  onClick={[Function]}
/>
`;
